[gd_scene load_steps=18 format=3 uid="uid://cwb50xgo8cb3m"]

[ext_resource type="Script" path="res://scenes/autoload/audio_manager.gd" id="1_7uko5"]
[ext_resource type="AudioStream" uid="uid://d4mkqd53usobh" path="res://assets/sound/background/bg_alone.wav" id="3_we33e"]
[ext_resource type="AudioStream" uid="uid://c7v1xd6rmhvy7" path="res://assets/sound/background/bg_couple.wav" id="4_bo7si"]
[ext_resource type="AudioStream" uid="uid://7v4gfhilf78b" path="res://assets/sound/background/bg_family.wav" id="5_bibqw"]
[ext_resource type="AudioStream" uid="uid://btvjyfak5oja4" path="res://assets/sound/garbage/push_garbage.wav" id="6_ai1ad"]
[ext_resource type="AudioStream" uid="uid://l5ocnw0023je" path="res://assets/sound/background/bg_divorce.wav" id="6_mnrr0"]
[ext_resource type="AudioStream" uid="uid://bobm5oane73gs" path="res://assets/sound/garbage/capture_garbage.wav" id="7_nuid2"]
[ext_resource type="AudioStream" uid="uid://bob0clslp3o54" path="res://assets/sound/cat_capture_robot.wav" id="8_yc6l7"]
[ext_resource type="AudioStream" uid="uid://d33gnpb6bajno" path="res://assets/sound/car_capture_robot.wav" id="9_pjgsa"]
[ext_resource type="AudioStream" uid="uid://dx335y2rjnjf7" path="res://assets/sound/first_scene.wav" id="10_3emqk"]
[ext_resource type="AudioStream" uid="uid://btcdkfty2da6k" path="res://assets/sound/objects/activate_button.wav" id="11_30i5h"]
[ext_resource type="AudioStream" uid="uid://8w66mil25tcy" path="res://assets/sound/objects/get_electricity.wav" id="12_4a77o"]
[ext_resource type="AudioStream" uid="uid://b5yp38j61u88j" path="res://assets/sound/click.wav" id="12_6md4n"]
[ext_resource type="AudioStream" uid="uid://g7tfn77ddyp3" path="res://assets/sound/objects/wet_spot.wav" id="13_02lm4"]
[ext_resource type="AudioStream" uid="uid://tokrb6joraqn" path="res://assets/sound/garbage/bin_capture_garbage.wav" id="14_i4rwo"]
[ext_resource type="AudioStream" uid="uid://bm57gpeufyuaj" path="res://assets/sound/next_level_ok.wav" id="15_y7sux"]
[ext_resource type="AudioStream" uid="uid://hqur0d16f4te" path="res://assets/sound/next_level_error.wav" id="16_k6c8q"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_7uko5")

[node name="SFX" type="Node" parent="."]

[node name="PushGarbagePlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("6_ai1ad")
bus = &"SFX"

[node name="CaptureGarbagePlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("7_nuid2")
max_polyphony = 3
bus = &"SFX"

[node name="CatCapturePlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("8_yc6l7")
bus = &"SFX"

[node name="CarCapturePlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("9_pjgsa")
bus = &"SFX"

[node name="ActivateButtonPlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("11_30i5h")
bus = &"SFX"

[node name="GetElectricityPlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("12_4a77o")
bus = &"SFX"

[node name="WetSpotPlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("13_02lm4")
volume_db = 10.0
bus = &"SFX"

[node name="BinCapturePlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("14_i4rwo")
bus = &"SFX"

[node name="NextLevelOkPlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("15_y7sux")
bus = &"SFX"

[node name="NextLevelErrorPlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("16_k6c8q")
bus = &"SFX"

[node name="ButtonClickPlayerSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("12_6md4n")
volume_db = -10.0
bus = &"SFX"

[node name="Music" type="Node" parent="."]

[node name="IntroThemePlayerMusic" type="AudioStreamPlayer" parent="Music"]
unique_name_in_owner = true
stream = ExtResource("10_3emqk")
bus = &"Music"

[node name="MainThemeAlonePlayerMusic" type="AudioStreamPlayer" parent="Music"]
unique_name_in_owner = true
stream = ExtResource("3_we33e")
bus = &"Music"

[node name="MainThemeCouplePlayerMusic" type="AudioStreamPlayer" parent="Music"]
unique_name_in_owner = true
stream = ExtResource("4_bo7si")
bus = &"Music"

[node name="MainThemeFamilyPlayerMusic" type="AudioStreamPlayer" parent="Music"]
unique_name_in_owner = true
stream = ExtResource("5_bibqw")
bus = &"Music"

[node name="MainThemeDivorcePlayerMusic" type="AudioStreamPlayer" parent="Music"]
unique_name_in_owner = true
stream = ExtResource("6_mnrr0")
bus = &"Music"
